# flex_lib

./: .gitignore  CMakeLists.txt  flex_lib.sln
flex_lib/: lazy_list.h  lazy_list.inl.h  property.hpp  stringized_enum.h
flex_lib/config/: compiler.h  compiler_gcc.h  compiler_msvc.h  config.h
flex_lib/lazy_list/: common.h  lazy_list_factory.h  lazy_list_impl.h
flex_lib/properties/: abstract_property.hpp  dynamic_lex_access.hpp  fwd_rw_property.hpp  index_property.hpp  properties_fwd.hpp  property_accessors.hpp  rw_property.hpp  simple_property.hpp
flex_lib/variant/: static_visitor.h  variant_impl.h
include/flex_lib/: detector.h  foreach.hpp  iterator.hpp  lazy_list.h  pimpl.h  stringized_enum.h  variant.h
include/flex_lib/config/: compiler_clang.h  compiler_msvc.h
include/flex_lib/lazy_list/: common.h  lazy_list_builder.h  lazy_list_factory.h  lazy_list_impl.h  lazy_list_iterator.h  lazy_list_ops.h
include/flex_lib/properties/: dynamic_access.hpp  index_property_fwd.hpp  index_property_impl.hpp  property_pp.hpp  property_traits.hpp
include/flex_lib/variant/: variant_impl.h
tests/: CMakeLists.txt
tests/lazy_list/: CMakeLists.txt  ReadMe.txt  lazy_list.cpp  lazy_list.vcxproj  lazy_list.vcxproj.filters
tests/variant/: CMakeLists.txt  variant.cpp
tools/: CMakeLists.txt
tools/codegen/: CMakeLists.txt
tools/codegen/src/: ast_reflector.cpp  ast_reflector.h  ast_utils.h  basic_generator.cpp  basic_generator.h  cpp_source_stream.h  decls_reflection.h  enum2string_generator.cpp  enum2string_generator.h  main.cpp  options.h  pimpl_generator.cpp  pimpl_generator.h  type_info.cpp  type_info.h  utils.h
tools/codegen/test/: CMakeLists.txt
tools/codegen/test/enum2string/: CMakeLists.txt  enum2string.cpp  test_enums.h
tools/codegen/test/pimpl/: CMakeLists.txt  pimpl_gen_test.cpp  test_pimpl.h
